<resources>
    <string name="app_name">team</string>
    <string name="welcome">Futbol Total!</string>
    <string name="titleName">Team</string>
    <string name="titleStadium">Stadium</string>
    <string name="titleJersey">Jersey</string>
    <string name="titleDescription">Description</string>
    <string name="titleYear">Foundation year</string>
    <string name="titleContact">Contacts</string>
    <string name="main">Leagues</string>
    <string name="wait">One moment, please</string>
    <string name="lastEvents">Last 5 events</string>
</resources>